// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parseBlockNumber > should throw if invalid block number 1`] = `
[TypeError: InvalidBlockNumberError: Value 0.5 is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 2`] = `
[TypeError: InvalidBlockNumberError: Value -1 is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 3`] = `
[TypeError: InvalidBlockNumberError: Value 52 is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 4`] = `
[TypeError: InvalidBlockNumberError: Value 0x is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 5`] = `
[TypeError: InvalidBlockNumberError: Value 0 is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 6`] = `
[TypeError: InvalidBlockNumberError: Value  is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 7`] = `
[TypeError: InvalidBlockNumberError: Value true is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 8`] = `
[TypeError: InvalidBlockNumberError: Value [object Object] is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;

exports[`parseBlockNumber > should throw if invalid block number 9`] = `
[TypeError: InvalidBlockNumberError: Value not an block number is not a valid BlockNumber. BlockNumbers must be an integer >= 0
https://tevm.sh/reference/errors]
`;
